istio/istio-gateway-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtual-service
spec:
  hosts:
    - '*'
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            exact: /order
        - uri:
            exact: /shipping
      route:
        - destination:
            host: order-service
            port:
              number: 3000
        - destination:
            host: shipping-service
            port:
              number: 3001
